objects/CRM_Mortgage_Securities_Data__c.object
<CustomObject>
    <fields>
        <fullName>CRM_Mtg_Contract_Price__c</fullName>
        <label>Contract Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_DESRecordActiveFlag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>DESRecordActiveFlag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Doc_Header_Id__c</fullName>
        <label>Doc Header Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Favourable_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Favourable Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Holding__c</fullName>
        <label>Holding</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Insured_Amount__c</fullName>
        <label>Insured Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Mortgage_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mortgage Application</label>
        <referenceTo>CRM_Mortgage_Application_Data__c</referenceTo>
        <relationshipLabel>Mortgage Securities</relationshipLabel>
        <relationshipName>Mortgage_Securities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Preapproval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preapproval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Property_Type__c</fullName>
        <label>Property Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Replacement_Insurance__c</fullName>
        <label>Replacement Insurance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_Address__c</fullName>
        <label>Security Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_City__c</fullName>
        <label>Security City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_Id__c</fullName>
        <label>Security Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_LVR__c</fullName>
        <label>Security LVR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_Post_Code__c</fullName>
        <label>Security Post Code</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_State__c</fullName>
        <label>Security State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_Total_Valuation__c</fullName>
        <label>Security Total Valuation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Security_Type__c</fullName>
        <label>Security Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Transaction__c</fullName>
        <label>Transaction</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Unique_Id__c</fullName>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Valuation_Date__c</fullName>
        <label>Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_Mtg_Valuer__c</fullName>
        <label>Valuer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mortgage Securities</label>
    <nameField>
        <displayFormat>Sec-{0000000}</displayFormat>
        <label>Record No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mortgage Securities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>